custom.css
body {
	max-width: 1280px;
	margin: auto !important;
}

header#main-banner {
    background-color: transparent !important;
}

.site-header nav {
    float: left !important;
    margin-left: 0 !important;
}

.nav-primary .wpsight-menu a {
    color: #d0b15e !important;
}

.nav-primary .wpsight-menu a:hover {
    color: #3e392b !important;
}

#home-cta-2 {
    background-color: #e8f2f9 !important;
}

#home-cta-2 .cta-description {
    max-width: 100% !important;
}


input[type="submit"] {
    background-color: #d0b15e !important;
}


/* "View Homes" Button on home page */
a.button {
    background-color: #a4ce59 !important;
}



/***** FOOTER *****/

.site-footer-top.site-section {
    background-color: #d0b15e !important;
}


/***** MEDIA QUERIES *****/

@media screen and (max-width: 1280px) {
	.container {
		width: 90% !important;
	}
}
@media screen and (max-width: 1080px) {

	.site-header nav {
	    float: left !important;
	    margin-left: -40px !important;
	    width: max-content !important;
	}

}

